# TobyHabit

./: .gitignore  README.md  pyproject.toml
backend/: config.py  database.py  main.py
backend/models/: __init__.py  habit.py
backend/routers/: checkins.py  habits.py  stats.py
backend/schemas/: checkin.py  habit.py
backend/services/: streak.py  tree_logic.py
deploy/: tobyhabit.service
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  habits.ts
frontend/src/components/checkin/: CheckinFlow.tsx
frontend/src/components/habit/: CalendarHeatmap.tsx  CreateHabitModal.tsx  HabitEditModal.tsx
frontend/src/components/layout/: BottomNav.tsx  Layout.tsx
frontend/src/components/shared/: CelebrationOverlay.tsx
frontend/src/components/tree/: TreeCard.tsx  TreeSVG.tsx
frontend/src/pages/: Forest.tsx  HabitDetail.tsx  Journal.tsx
frontend/src/store/: habitStore.ts
frontend/src/utils/: date.ts  tree.ts
